Add PASTIS dataset sample

--- a/initial_testing.ipynb
+++ b/initial_testing.ipynb
@@ -79,25 +79,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2a4fdd89",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = \"data/PASTIS/\"\n",
+    "data_path = \"data/PASTIS_small/\"\n",
     "dataset_size = 20\n",
     "\n",
     "imgs = [] ; masks = [] ; masks2 = []\n",
     "for i in range(dataset_size):\n",
-    "    img = np.load(data_path + f\"DATA_S2/S2_100{i//10}{i%10}.npy\")[1,1,:,:]\n",
+    "    img = np.load(data_path + f\"DATA/S2_100{i//10}{i%10}.npy\")[1,1,:,:]\n",
     "    imgs.append(np.squeeze(img))\n",
-    "    masks.append(np.load(data_path + f\"ANNOTATIONS/ParcelIDs_100{i//10}{i%10}.npy\"))\n",
-    "    masks2.append(np.load(data_path + f\"INSTANCE_ANNOTATIONS/HEATMAP_100{i//10}{i%10}.npy\"))"
+    "    masks.append(np.load(data_path + f\"ANNOTATIONS/ParcelIDs_100{i//10}{i%10}.npy\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "79e41fa9",
    "metadata": {},
    "outputs": [
@@ -113,8 +112,7 @@
    ],
    "source": [
     "print(imgs[0].shape)\n",
-    "print(masks[0].shape)\n",
-    "print(masks2[0].shape)"
+    "print(masks[0].shape)"
    ]
   },
   {
