Update Unser notebook corrections

--- a/Unser_1995.ipynb
+++ b/Unser_1995.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 186,
       "metadata": {
         "id": "VNYj62DOPOmC"
       },
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 187,
       "metadata": {
         "id": "WkBZhkosUkCZ"
       },
@@ -54,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 188,
       "metadata": {
         "id": "bP9NnMupVHb9"
       },
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 189,
       "metadata": {
         "id": "oibA6xo4VIcB"
       },
@@ -85,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 190,
       "metadata": {
         "id": "d2VgkWeSVNs2"
       },
@@ -102,7 +102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 191,
       "metadata": {
         "id": "kN_uqNc7VR1W"
       },
@@ -118,7 +118,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 192,
       "metadata": {
         "id": "3JfR7pRcL5fz"
       },
@@ -140,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 193,
       "metadata": {
         "id": "eji7HRbJMsDN"
       },
@@ -184,7 +184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 194,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -207,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 195,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -220,11 +220,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 196,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def plot_gt_and_seg(idx, imgs, ground_truth, segmentation):\n",
+        "def plot_gt_and_seg(idx, ground_truth, segmentation):\n",
         "    gt = ground_truth[idx]\n",
         "    \n",
         "    plt.figure(figsize=(8,4))\n",
@@ -242,7 +242,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": 197,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -267,7 +267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": 201,
       "metadata": {},
       "outputs": [
         {
@@ -288,7 +288,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 118,
+      "execution_count": 202,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -297,7 +297,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": 203,
       "metadata": {},
       "outputs": [
         {
@@ -312,12 +312,12 @@
         }
       ],
       "source": [
-        "plot_gt_and_seg(idx, imgs, ground_truth, seg)"
+        "plot_gt_and_seg(idx, ground_truth, seg)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 204,
       "metadata": {},
       "outputs": [
         {
@@ -334,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 217,
+      "execution_count": 205,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -348,32 +348,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 198,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "def plot_patchwork_and_gt(idx):\n",
-        "    img_path = f\"patchworks/patchwork{idx}.png\"\n",
-        "    gt_path  = f\"patchworksgt/patchworkgt{idx}.png\"\n",
-        "    img = skimage.io.imread(img_path)\n",
-        "    gt  = skimage.io.imread(gt_path)\n",
-        "    \n",
-        "    plt.figure(figsize=(8,4))\n",
-        "    plt.subplot(1,2,1)\n",
-        "    plt.title(\"Patchwork\")\n",
-        "    plt.imshow(img, cmap='gray')\n",
-        "    plt.axis('off')\n",
-        "    plt.subplot(1,2,2)\n",
-        "    plt.title(\"Ground Truth\")\n",
-        "    plt.imshow(gt, cmap='tab20')\n",
-        "    plt.axis('off')\n",
-        "    plt.tight_layout()\n",
-        "    plt.show()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 206,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -396,11 +371,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 220,
+      "execution_count": 207,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def plot_patchwork_gt_and_seg(idx, patch_imgs, patch_gt, segmentation):\n",
+        "def plot_patchwork_gt_and_seg(idx, patch_gt, segmentation):\n",
         "    gt = patch_gt[idx]\n",
         "    \n",
         "    plt.figure(figsize=(8,4))\n",
@@ -418,7 +393,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 223,
+      "execution_count": 221,
       "metadata": {},
       "outputs": [
         {
@@ -439,7 +414,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 225,
+      "execution_count": 222,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -448,7 +423,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 226,
+      "execution_count": 223,
       "metadata": {},
       "outputs": [
         {
@@ -463,12 +438,12 @@
         }
       ],
       "source": [
-        "plot_patchwork_gt_and_seg(idx, patch_imgs, patch_gt, seg)"
+        "plot_patchwork_gt_and_seg(idx, patch_gt, seg)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 227,
+      "execution_count": 224,
       "metadata": {},
       "outputs": [
         {
