--- a/initial_testing.ipynb
+++ b/initial_testing.ipynb
@@ -759,7 +759,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "VIC",
    "language": "python",
    "name": "python3"
   },
@@ -773,7 +773,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
