Remove comments from parameters in notebook

--- a/neutrosophic_set_wv.ipynb
+++ b/neutrosophic_set_wv.ipynb
@@ -364,8 +364,8 @@
    "source": [
     "num_model=2\n",
     "seg_imgs = []\n",
-    "eps = 1e-3 ###A CHECK\n",
-    "gamma = 20 ###A CHECK j'ai l'impression qu'entre 20 et 60 ça n'a pas bcp d'impact -> regarder avec une métrique\n",
+    "eps = 1e-3 \n",
+    "gamma = 20 \n",
     "MAX_ITER = 10 \n",
     "wavelet = pywt.Wavelet('db4')\n",
     "for img in tqdm(imgs[:1]):\n",
