--- a/neutrosophic_set_wv.ipynb
+++ b/neutrosophic_set_wv.ipynb
@@ -374,7 +374,7 @@
     "    L,u,v = cv2.split(cv2.cvtColor(img,cv2.COLOR_RGB2Luv)) #conversion RGB -> LUV\n",
     "    gray_img = cv2.cvtColor(img,cv2.COLOR_RGB2GRAY)\n",
     "    #Step 2 :  Decomposition of the gray image into subands (only LH,HL used )\n",
-    "    _, (LH, HL, HH) = pywt.dwt2(gray_img, wavelet) #look at what it does\n",
+    "    _, (LH, HL, HH) = pywt.dwt2(gray_img, wavelet)\n",
     "    #Step 3: Mean Energy calculation of LH and HL\n",
     "    MEHL = resize(uniform_filter(HL,size=W_size,mode='reflect',output='float64'),(w,h),mode='reflect')\n",
     "    MELH = resize(uniform_filter(LH,size=W_size,output='float64',mode='reflect'),(w,h),mode='reflect')\n",
@@ -417,21 +417,16 @@
     "    for channel in img_NS_aug:\n",
     "        g_T = uniform_filter(channel[0],size=5,output='float64',mode='reflect')\n",
     "        X.append(np.where(channel[1]<=gamma,channel[0],g_T))\n",
-    "    #rajoute les coordonnées du pixel (n'est pas beaucoup mieux mais un peu quand même)\n",
-    "    # l_i = np.array([i for i in range(w) for j in range(h)]).reshape((w,h))/w\n",
-    "    # l_j = np.array([j for i in range(w) for j in range(h)]).reshape((w,h))/h\n",
-    "    # X.append(l_i)\n",
-    "    # X.append(l_j)\n",
+    "    #Add pixel coordinates\n",
+    "    l_i = np.array([i for i in range(w) for j in range(h)]).reshape((w,h))/w\n",
+    "    l_j = np.array([j for i in range(w) for j in range(h)]).reshape((w,h))/h\n",
+    "    X.append(l_i)\n",
+    "    X.append(l_j)\n",
     "    X = np.dstack(X)\n",
     "    best_K, score = find_optimal_K(X, range(2, 8))\n",
     "    labels, centers, _ = c_kmeans(X, best_K)\n",
     "    seg_imgs.append(labels)\n",
-    "\n",
-    "# with(open(f\"data/segmentation/features_{num_model}.pkl\",'wb')) as file:\n",
-    "#     pkl.dump(X,file)\n",
-    "# best_img = cv2.imread('data/segmentation/coif10_moy_loc_5_20.png')\n",
-    "\n",
-    "# cv2.imwrite(f\"data/segmentation/labels_model{num_model}.png\",labels)"
+    "\n"
    ]
   },
   {
@@ -476,11 +471,6 @@
     "print(f'NDHD : {round(normalized_DHD(seg_imgs[idx],ground_truth[idx]),2)}')\n",
     "plot_comparison_mask(seg_imgs[idx],masks[idx])\n",
     "plot_comparison(seg_imgs[idx],imgs[idx])\n",
-    "# fig, axes = plt.subplots(ncols=3)\n",
-    "# idx = np.random.randint(0,20)\n",
-    "# axes[0].imshow(seg_imgs[idx], cmap='inferno') #cmap='tab10')\n",
-    "# axes[1].imshow(masks[idx])\n",
-    "# axes[2].imshow(imgs[idx])\n",
     "\n",
     "# Normalized Directionnal Hamming Distance\n",
     "DHDs = [normalized_DHD(seg_imgs[i],ground_truth[i]) for i in range(len(seg_imgs))]\n",
